# packer

./: .gitignore  .replit  CMakeLists.txt  CMakelists.txt  Dockerfile  Makefile  README.md  build.sh  configure  download.cpp  download.h  main.cpp  packer  replit.nix
.github/workflows/: cmake.yml  makefile.yml
Headers/: funcs.h
manifests/: Empty.json
projects/: packer.cbp  packer.geany
src/: funcions.cpp  main.cpp
