cmake_minimum_required(VERSION 3.10)
set(CMAKE_BUILD_TYPE Debug)
project(packer VERSION 0.1)
add_executable(packer src/main.cpp)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_CXX_COMPILER "g++")
set(CMAKE_CXX_STANDARD 17)
set_property(TARGET packer PROPERTY CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
FIND_PACKAGE(CURL)
target_link_libraries(packer curl)
target_link_libraries(packer stumpless)
target_link_libraries(packer stdc++fs)
IF(CURL_FOUND)
  INCLUDE_DIRECTORIES(${CURL_INCLUDE_DIR})
  target_link_libraries(packer CURL::libcurl)
ELSE(CURL_FOUND)
  MESSAGE(FATAL_ERROR "Could not find the CURL library and development files.")
ENDIF(CURL_FOUND)
target_include_directories(packer PRIVATE Headers src)
